Exp-2/output/hf-eval-data-v3-reuslt-34b-eval/f00142_generate_conversation.err
  File "./f00142_generate_conversation.py", line 46
    def test_generate_conversation():
    ^
SyntaxError: invalid syntax
